Profile right icon spacing fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -5,10 +5,6 @@
     margin-top: 25px; 
     position: relative;
 }
-
-span {
-    display: block;
-}
 .left-arrow{
     left:-25px;
 }
